# wherebus

./: .gitignore  Cargo.toml  README.md
android/: keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/androidTest/java/com/noctiro/wherebus/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/noctiro/wherebus/: MainActivity.kt
android/app/src/main/java/com/noctiro/wherebus/data/: CruxRuntime.kt  CruxUserEvent.kt  NativeModels.kt  NativeWhereBusBridge.kt  PlatformLocationProvider.kt  PlatformPermissionRequester.kt
android/app/src/main/java/com/noctiro/wherebus/domain/: WhereBusModels.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/noctiro/wherebus/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
core/: Cargo.toml
core/src/: app.rs  bridge.rs  domain.rs  kernel.rs  lib.rs  main.rs  provider.rs  service.rs  support.rs
core/src/app/: dto.rs  effect.rs  event.rs  model.rs  update.rs  view.rs
core/src/domain/: boundary.rs  config.rs  region.rs  transit.rs
core/src/kernel/: cache.rs  connectivity.rs  facade.rs  storage.rs
core/src/kernel/storage/: platform.rs  tables.rs
core/src/provider/: chelaile.rs  debug.rs  mygolbs.rs  registry.rs
core/src/provider/chelaile/: cities.rs  client.rs  raw.rs
core/src/provider/mygolbs/: cities.rs  client.rs  raw.rs
core/src/service/: manage.rs  query.rs
core/src/support/: coord.rs  pinyin_match.rs
scripts/: debug_chelaile.py  debug_mygolbs.py  find_rs_duplicates.py
(+21 files in other folders)
