[package]
name = "wherebus"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
crux_core = "0.17.0"
dirs = "6"
async-trait = "0.1.89"
futures = "0.3"
redb = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
urlencoding = "2"
md-5 = "0.11"
aes = "0.9"
base64 = "0.22"
ecb = { version = "0.2", features = ["alloc"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "registry"] }
tracing-android = "0.2"
zstd = "0.13"
